review fixes - typespec model customization